--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div id="con1" class="container-fluid">
         <!--body row one-->
         <div id="row1" class="row">
-            <div id="rowcol1" class="col-10 col-lg-3 col-md-4 col-sm-6">
+            <div id="rowcol1" class="col-12 col-lg- col-md-4 col-sm-6">
                 <div class="card">
                     <div id="card-inner">
                         <a id="card-link" href="listing.html">
@@ -92,7 +92,7 @@
 
                 </div>
             </div>
-            <div id="rowcol1" class="col-10 col-lg-3 col-md-4 col-sm-6">
+            <div id="rowcol1" class="col-12 col-lg-3 col-md-4 col-sm-6">
                 <div class="card">
                     <div id="card-inner">
                         <a id="card-link" href="listing.html">
@@ -105,7 +105,7 @@
 
                 </div>
             </div>
-            <div id="rowcol1" class="col-10 col-lg-3 col-md-4 col-sm-6">
+            <div id="rowcol1" class="col-12 col-lg-3 col-md-4 col-sm-6">
                 <div class="card">
                     <div id="card-inner">
                         <a id="card-link" href="listing.html">
@@ -118,7 +118,7 @@
 
                 </div>
             </div>
-            <div id="rowcol1" class="col-10 col-lg-3 col-md-4 col-sm-6">
+            <div id="rowcol1" class="col-12 col-lg-3 col-md-4 col-sm-6">
                 <div class="card">
                     <div id="card-inner">
                         <a id="card-link" href="listing.html">
@@ -144,7 +144,7 @@
                 <h4>Explore curated lists of top restaurants, cafes, pubs, and bars in Hyderabad, based on trends.</h4>
             </div>
 
-            <div id="row2col" class="col-10 col-lg-3 col-md-4 col-sm-6">
+            <div id="row2col" class="col-12 col-lg-3 col-md-4 col-sm-6">
                 <a id="row2colcardlink" class="row2colcardlink1" href="listing.html">
                     <div class="row2colcardtitle">
                         Craving chai?
@@ -153,7 +153,7 @@
                 </a>
             </div>
             <!--row2col2-->
-            <div id="row2col" class="col-10 col-lg-3 col-md-4 col-sm-6">
+            <div id="row2col" class="col-12 col-lg-3 col-md-4 col-sm-6">
                 <a id="row2colcardlink" class="row2colcardlink2" href="listing.html">
                     <div class="row2colcardtitle">
                         Newly Opened
@@ -163,7 +163,7 @@
             </div>
             <!---->
             <!--row2 col3-->
-            <div id="row2col" class="col-10 col-lg-3 col-md-4 col-sm-6">
+            <div id="row2col" class="col-12 col-lg-3 col-md-4 col-sm-6">
                 <a id="row2colcardlink" class="row2colcardlink3" href="listing.html">
                     <div class="row2colcardtitle">
                         Trending This Weekend
@@ -172,7 +172,7 @@
                 </a>
             </div>
             <!--row 2 col4-->
-            <div id="row2col" class="col-10 col-lg-3 col-md-4 col-sm-6">
+            <div id="row2col" class="col-12 col-lg-3 col-md-4 col-sm-6">
                 <a id="row2colcardlink" class="row2colcardlink4" href="listing.html">
                     <div class="row2colcardtitle">
                         Best Bars & Pubs
