minor layout adjustment

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div id="con1" class="container-fluid">
         <!--body row one-->
         <div id="row1" class="row">
-            <div id="rowcol1" class="col-12 col-lg- col-md-4 col-sm-6">
+            <div id="rowcol1" class="col-12 col-lg-3 col-md-4 col-sm-6">
                 <div class="card">
                     <div id="card-inner">
                         <a id="card-link" href="listing.html">
